[gd_scene load_steps=12 format=3 uid="uid://dpxtt5l4t58ul"]

[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_vxfr8"]
[ext_resource type="Script" path="res://resources/character_stats.gd" id="2_vcpov"]
[ext_resource type="SpriteFrames" uid="uid://c348gyd4lwjrv" path="res://assets/heroes/base_melee.tres" id="3_r5g28"]
[ext_resource type="Script" path="res://components/attack_component.gd" id="4_wlxog"]
[ext_resource type="Script" path="res://components/health_component.gd" id="5_x8ulw"]
[ext_resource type="Script" path="res://components/health_bar.gd" id="6_5168f"]
[ext_resource type="Script" path="res://components/character_sprite.gd" id="7_l6hlr"]
[ext_resource type="Script" path="res://components/detection_area.gd" id="8_m3v1n"]
[ext_resource type="Script" path="res://components/collision_area.gd" id="9_w1x84"]
[ext_resource type="Script" path="res://components/fire_rate_component.gd" id="10_o76o2"]

[sub_resource type="Resource" id="Resource_pgmm2"]
resource_local_to_scene = true
script = ExtResource("2_vcpov")
name = "Rat"
price = 100
sprite_frames = ExtResource("3_r5g28")
health = 50
max_health = 50
damage = 2
speed = 100.0
fire_rate = 20.0
pierce = 1
strategy = 0
attack_range = 40.0
attack_type = 0
size = 1
reward = 10

[node name="Enemy" type="Node2D"]
script = ExtResource("1_vxfr8")
stats = SubResource("Resource_pgmm2")
team = 1

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("4_wlxog")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("5_x8ulw")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -65.0
offset_right = 50.0
offset_bottom = -44.0
theme_override_font_sizes/font_size = 12
script = ExtResource("6_5168f")

[node name="CharacterSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = ExtResource("3_r5g28")
animation = &"attack"
script = ExtResource("7_l6hlr")

[node name="DetectionArea" type="Area2D" parent="."]
script = ExtResource("8_m3v1n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 5)

[node name="CollisionArea" type="Area2D" parent="."]
script = ExtResource("9_w1x84")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]

[node name="FireRateComponent" type="Timer" parent="."]
autostart = true
script = ExtResource("10_o76o2")
